[package]
name = "proof"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5", features = ["rand_core", "serde"], default-features = false }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
group = { git = "https://github.com/dwallet-labs/group.git" }
thiserror = "1.0"

# For benchmarking
criterion = { version = "0.5", features = ["html_reports"], optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
rstest = { version = "0.18", optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }

[features]
# This feature is for internal-use only (for benchmarking) and exists due to limitations of benchmarking non-public functions in Rust.
# There will be no SemVer support for this feature.
benchmarking = ["dep:criterion", "dep:rand_core", "dep:rstest"]