[package]
name = "proof"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5", features = ["rand_core", "serde"], default-features = false }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
group = { git = "https://github.com/dwallet-labs/group.git" }
commitment = { git = "https://github.com/dwallet-labs/commitment.git" }
thiserror = "1.0"
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git" }

criterion = { version = "0.5", features = ["html_reports"], optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["std"], optional = true }
rstest = { version = "0.18", optional = true }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git", features = ["cloneable"] }

[features]
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rand", "dep:rstest", "bulletproofs/cloneable"]
